# gsindex

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yaml  ci.yaml  integrate.yaml  publish.yaml
src/: __init__.py  gsindex.py
tests/: test_gsindex.py
